<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>

    <string name="activity_title_wather">Weather</string>
    <string name="activity_title_user_details">User Details</string>

    <string name="btn_text_retry">Retry</string>
    <string name="view_text_description">Description:</string>
    <string name="string_content_description">Non accessible view</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="no_title">No Title</string>
    <string name="no_description">There is no description</string>
    <string name="no_date">No date information</string>
    <string name="rss_title">%1$s (%2$s)</string>
    <string name="no_connection">No Connection</string>
    <string name="settings">Settings</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="clouds">Clouds:</string>
    <string name="rain">Rain:</string>
    <string name="humidity">Humidity:</string>
    <string name="pression">Pression:</string>

    <string name="celsius">%1$s °C</string>
    <string name="farenhayt">%1$s °F</string>
    <string name="percent">%1$s %%</string>
    <string name="rain_in_mm">%1$s mm</string>
    <string name="pression_unit">%1$s hPa</string>
    <string name="error_to_load">Error happened to get weather info</string>
</resources>
