<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sunrise"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtSunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sunset"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtSunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/clouds"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtClouds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/rain"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtRain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/humidity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/pression"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:id="@+id/txtPression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big" />
        </TableRow>
    </TableLayout>
</LinearLayout>